--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
       minimum-scale=1.0, maximum-scale=1.0, user-scalable=0, minimal-ui">
   </head>
 
-  <body>
-    <script src="/starfire_sdk.js"></script>
+  <body style='background: #fff'>
+    <div id='content'></div>
+    <script src="/fam_sdk.js"></script>
   </body>
 
 </html>
